--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -38,7 +38,9 @@
         "react-hooks/exhaustive-deps": "warn",
         "no-unused-expressions": "off",
         "react/jsx-filename-extension": [1, { "extensions": [".tsx"] }],
-        "react/jsx-indent" : ["error", 4],
+        "react/jsx-indent" : ["error", 2],
+        "indent": ["error", 2],
+
         "import/prefer-default-export": "off",
         "camelcase":"off",
         "@typescript-eslint/explicit-function-return-type": [
